@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
     api project(':tsubakuro-session')
+    api project(':tsubakuro-ipc')
+    api project(':tsubakuro-stream')
 
     api 'com.google.code.findbugs:jsr305:3.0.2'
     api 'org.slf4j:slf4j-api:1.7.36'
@@ -45,6 +47,41 @@ sourceSets {
 application {
     applicationName = 'TransactionBench'
     mainClass = 'com.tsurugidb.tsubakuro.kvs.bench.TransactionBench'
+}
+
+application {
+    applicationName = 'RealTransactionTest'
+    mainClass = 'com.tsurugidb.tsubakuro.kvs.realbench.RealTransactionTest'
+}
+
+tasks.register('runShortMockBench', JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'com.tsurugidb.tsubakuro.kvs.bench.TransactionBench'
+    jvmArgs = ['-Xmx1024M']
+}
+
+tasks.register('runFullMockBench', JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'com.tsurugidb.tsubakuro.kvs.bench.TransactionBench'
+    jvmArgs = ['-Xmx1024M']
+    args = ['full']
+}
+
+tasks.register('runShortBench', JavaExec) {
+    dependsOn ':tsubakuro-ipc:assemble'
+    classpath = sourceSets.main.runtimeClasspath
+    systemProperty 'com.tsurugidb.tsubakuro.jnilib', "${project(':tsubakuro-ipc').buildDir}/native/libtsubakuro.so"
+    mainClass = 'com.tsurugidb.tsubakuro.kvs.bench.RealTransactionBench'
+    jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED', '-Xmx1024M']
+}
+
+tasks.register('runFullBench', JavaExec) {
+    dependsOn ':tsubakuro-ipc:assemble'
+    classpath = sourceSets.main.runtimeClasspath
+    systemProperty 'com.tsurugidb.tsubakuro.jnilib', "${project(':tsubakuro-ipc').buildDir}/native/libtsubakuro.so"
+    mainClass = 'com.tsurugidb.tsubakuro.kvs.bench.RealTransactionBench'
+    jvmArgs = ['--add-opens=java.base/java.nio=ALL-UNNAMED', '-Xmx1024M']
+    args = ['full']
 }
 
 test {
@@ -95,4 +132,3 @@ tasks.matching { it.name == 'eclipseJdt' }.each { task ->
         classpath.entries.unique()
     }
 }
-
